@@ -74,10 +74,11 @@ Class pdf_expedition_rouget extends ModelePdfExpedition
 	}
 
 	/**
-	 *		\brief      Fonction generant le document sur le disque
-	 *		\param	    object			Objet expedition a generer (ou id si ancienne methode)
-	 *		\param		outputlangs		Lang output object
-	 * 	 	\return	    int     		1=ok, 0=ko
+	 *	Fonction generant le document sur le disque
+	 *
+	 *	@param	    object			Objet expedition a generer (ou id si ancienne methode)
+	 *	@param		outputlangs		Lang output object
+	 * 	@return	    int     		1=ok, 0=ko
 	 */
 	function write_file(&$object, $outputlangs)
 	{
@@ -133,6 +134,12 @@ Class pdf_expedition_rouget extends ModelePdfExpedition
                     $pdf->setPrintFooter(false);
                 }
                 $pdf->SetFont(pdf_getPDFFont($outputlangs));
+                // Set path to the background PDF File
+                if (empty($conf->global->MAIN_DISABLE_FPDI) && ! empty($conf->global->MAIN_ADD_PDF_BACKGROUND))
+                {
+                    $pagecount = $pdf->setSourceFile($conf->mycompany->dir_output.'/'.$conf->global->MAIN_ADD_PDF_BACKGROUND);
+                    $tplidx = $pdf->importPage(1);
+                }
 
 				$pdf->Open();
 				$pagenb=0;
@@ -152,6 +159,7 @@ Class pdf_expedition_rouget extends ModelePdfExpedition
 
 				// New page
 				$pdf->AddPage();
+				if (! empty($tplidx)) $pdf->useTemplate($tplidx);
 				$pagenb++;
 				$this->_pagehead($pdf, $object, 1, $outputlangs);
 				$pdf->SetFont('','', $default_font_size - 1);
