@@ -142,6 +142,12 @@ class pdf_soleil extends ModelePDFFicheinter
                     $pdf->setPrintFooter(false);
                 }
                 $pdf->SetFont(pdf_getPDFFont($outputlangs));
+                // Set path to the background PDF File
+                if (empty($conf->global->MAIN_DISABLE_FPDI) && ! empty($conf->global->MAIN_ADD_PDF_BACKGROUND))
+                {
+                    $pagecount = $pdf->setSourceFile($conf->mycompany->dir_output.'/'.$conf->global->MAIN_ADD_PDF_BACKGROUND);
+                    $tplidx = $pdf->importPage(1);
+                }
 
 				$pdf->Open();
 				$pagenb=0;
@@ -159,6 +165,7 @@ class pdf_soleil extends ModelePDFFicheinter
 
 				// New page
 				$pdf->AddPage();
+				if (! empty($tplidx)) $pdf->useTemplate($tplidx);
 				$pagenb++;
 				$this->_pagehead($pdf, $object, 1, $outputlangs);
 				$pdf->SetTextColor(0,0,0);
@@ -289,6 +296,7 @@ class pdf_soleil extends ModelePDFFicheinter
 
 							// New page
 							$pdf->AddPage();
+				            if (! empty($tplidx)) $pdf->useTemplate($tplidx);
 							$pagenb++;
 							$this->_pagehead($pdf, $object, 0, $outputlangs);
 							$pdf->SetFont('','', $default_font_size - 1);
